# tauri-photobooth-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.jsx  ChromaKeyTest.jsx  main.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: bridge.cpp  canvas_fn.rs  chromokey_fn.rs  fs_utils.rs  globals.rs  image_fn.rs  init_project_fn.rs  license.rs  main.rs  printer_fn.rs  work_hours_fn.rs
src/admin/: ChromaKey.jsx  Editor.jsx  Editror.jsx  LinkedList.js  Printer.jsx  Settings.jsx  TemplateEditor.jsx  Timer.jsx  TouchScreen.jsx  store.js
src/components/: AdminHeaders.jsx  AdminShell.jsx  CanvasDrawer.jsx  Layout1.jsx  Layout2.jsx  ObjectProperties.jsx  PrinterPopup.jsx  TemplateRul.jsx  TemplateSimple.jsx
src/hooks/: usePageNavigation.js
src/pages/: CapturePage.jsx  CheckLicensePage.jsx  ListPage.jsx  MainPage.jsx  PrintPage.jsx  SvgDisplay.jsx  TemplatePage.jsx
src/utils/: canvasUtils.js
