[package]
name = "tauri-photobooth-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "1.7.2", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
rdev = "0.5.3"
device_query = "2.1.0"
tokio = { version = "1", features = ["full"] }
winapi = { version = "0.3.9", features = [ "winspool" ] }
bindgen = "0.70.1"
libc = "0.2"
lazy_static = "1.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
