[package]
name = "photobox-kazakhstan"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "1.7.2", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rdev = "0.5.3"
device_query = "2.1.0"
tokio = { version = "1", features = ["full"] }
winapi = { version = "0.3.9", features = [ "winspool" ] }
bindgen = "0.70.1"
libc = "0.2"
lazy_static = "1.4"
printers = "2.0.0"
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.4.2"

rsa = "0.9"
sha2 = "0.10"
pem = "3.0"
base64 = "0.21"
rand = "0.8"
mid = "1.1.0"
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
